objects/BRNSHRK__Brainshark_Config__c.object
<CustomObject>
    <fields>
        <fullName>BRNSHRK__Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brainshark_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brainshark Config</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Brainshark Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brainshark Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>